--- a/src/it/projects/issue-348-repository-from-project/pom.xml
+++ b/src/it/projects/issue-348-repository-from-project/pom.xml
@@ -22,7 +22,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.0.0-RC2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
