--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
           <dependency>
             <groupId>org.eclipse.sisu</groupId>
             <artifactId>org.eclipse.sisu.inject</artifactId>
-            <version>0.3.5</version>
+            <version>0.9.0.M2</version>
           </dependency>
         </dependencies>
       </plugin>
