--- a/src/it/projects/bom-flattenMode/pom.xml
+++ b/src/it/projects/bom-flattenMode/pom.xml
@@ -49,6 +49,18 @@
     </dependencies>
   </dependencyManagement>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>3.1.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
   <description>This project contains a module with a BOM.</description>
 
   <developers>
