Fix integration test

--- a/src/it/projects/bom-flattenMode/pom.xml
+++ b/src/it/projects/bom-flattenMode/pom.xml
@@ -27,6 +27,17 @@
         </configuration>
       </plugin>
     </plugins>
+
+    <!-- keep -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>3.1.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <ciManagement>
@@ -48,18 +59,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 
   <description>This project contains a module with a BOM.</description>
 
