--- a/src/it/projects/no-overwrite-3.6.3-later/invoker.properties
+++ b/src/it/projects/no-overwrite-3.6.3-later/invoker.properties
@@ -1,3 +1,3 @@
 # .flattened-pom.xml contains xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
 # xsd url changed to HTTPS in Maven 3.6.3 in https://issues.apache.org/jira/browse/MNG-6778
-invoker.maven.version = 3.6.3+
+invoker.maven.version = 3.6.3+,!4.0.0+
