Require Maven 3.6.3 as minimum

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
   </scm>
 
   <properties>
-    <mavenVersion>3.5.4</mavenVersion>
+    <mavenVersion>3.6.3</mavenVersion>
     <recommendedJavaBuildVersion>11</recommendedJavaBuildVersion>
     <project.build.outputTimestamp>2023-05-09T19:54:26Z</project.build.outputTimestamp>
   </properties>
@@ -227,6 +227,29 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-plugin-report-plugin</artifactId>
+          <configuration>
+            <requirementsHistories>
+              <requirementsHistory>
+                <version>1.5.0</version>
+                <maven>3.5.4</maven>
+                <jdk>1.8</jdk>
+              </requirementsHistory>
+              <requirementsHistory>
+                <version>1.4.0</version>
+                <maven>3.2.5</maven>
+                <jdk>1.8</jdk>
+              </requirementsHistory>
+            </requirementsHistories>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
