--- a/src/it/projects/complete-multimodule-parent-pom-direct-dependencies/pom.xml
+++ b/src/it/projects/complete-multimodule-parent-pom-direct-dependencies/pom.xml
@@ -14,6 +14,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <configuration>
+          <flattenDependencyMode>direct</flattenDependencyMode>
+        </configuration>
       </plugin>
     </plugins>
   </build>
