--- a/src/it/projects/inherit-parent-dependency/pom.xml
+++ b/src/it/projects/inherit-parent-dependency/pom.xml
@@ -4,21 +4,9 @@
 
   <parent>
     <groupId>org.codehaus.mojo.flatten.its</groupId>
-    <artifactId>parent-deps</artifactId>
+    <artifactId>parent-transitive-dep</artifactId>
     <version>1</version>
   </parent>
   <artifactId>resolve-properties</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <defaultGoal>verify</defaultGoal>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-          <artifactId>flatten-maven-plugin</artifactId>
-          <configuration>
-            <flattenDependencyMode>all</flattenDependencyMode>
-          </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
