--- a/src/it/projects/cmd-property-substituion/invoker.properties
+++ b/src/it/projects/cmd-property-substituion/invoker.properties
@@ -1,4 +1,4 @@
 #does not work for some reason of invoker
 #invoker.mavenOpts = -Dcmd.test.property=MagicValue42
-invoker.systemPropertiesFile = invoker.properties
+invoker.userPropertiesFile = invoker.properties
 cmd.test.property = MagicValue42
