--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>flatten-maven-plugin</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.7.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven Flatten Plugin</name>
@@ -122,13 +122,13 @@
   <scm>
     <connection>scm:git:https://github.com/mojohaus/flatten-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/flatten-maven-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.7.0</tag>
     <url>https://github.com/mojohaus/flatten-maven-plugin/tree/master</url>
   </scm>
 
   <properties>
     <mavenVersion>3.6.3</mavenVersion>
-    <project.build.outputTimestamp>2024-01-14T11:28:18Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-02-25T21:55:17Z</project.build.outputTimestamp>
   </properties>
 
   <!-- override versions of some transitive dependencies -->
