--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
   </scm>
 
   <properties>
-    <mavenVersion>3.6.3</mavenVersion>
+    <mavenVersion>4.0.0-rc-2</mavenVersion>
     <project.build.outputTimestamp>2025-02-25T21:55:28Z</project.build.outputTimestamp>
   </properties>
 
@@ -222,6 +222,23 @@
       <artifactId>maven-compat</artifactId>
       <version>${mavenVersion}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.sisu</groupId>
+      <artifactId>org.eclipse.sisu.inject</artifactId>
+      <version>0.9.0.M3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>4.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-component-annotations</artifactId>
+      <version>2.2.0</version>
     </dependency>
   </dependencies>
 
