extend test with example from 401 and fix for JDK 8

--- a/src/test/resources/keep-comments-in-pom/pom.xml
+++ b/src/test/resources/keep-comments-in-pom/pom.xml
@@ -12,6 +12,10 @@
 		<!-- comment1 for propertyWithTwoComments -->
 		<!-- comment2 for propertyWithTwoComments -->
 		<propertyWithTwoComments>test-propertyWithTwoComments</propertyWithTwoComments>
+
+		<hello>me</hello>
+		<test1.prop>HELLO${hello}${revision}</test1.prop>
+		<test2.prop>HELLO${hello}</test2.prop>
 	</properties>
 
 	<build>
