Use constant 3.6.3 in prerequisites/maven as minimal Maven version
It will allow declaring a newer version of Maven Api in the project.

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
   </contributors>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>3.6.3</maven>
   </prerequisites>
 
   <scm>
