Fix typo in License name
fix #445

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
   <licenses>
     <license>
-      <name>Apache Software Licenese</name>
+      <name>Apache Software License</name>
       <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <comments />
     </license>
