Create missing target directories, use NIO for file block operations
Fix #461

--- a/src/it/projects/resolve-properties-ci-do-not-interpolate-profile-activation-file/pom.xml
+++ b/src/it/projects/resolve-properties-ci-do-not-interpolate-profile-activation-file/pom.xml
@@ -15,6 +15,7 @@
         <version>@project.version@</version>
         <configuration>
           <flattenMode>resolveCiFriendliesOnly</flattenMode>
+          <outputDirectory>${project.build.directory}</outputDirectory>
         </configuration>
       </plugin>
     </plugins>
