Add a missing plugin version in ITS

--- a/src/it/projects/profile-with-dependencies-triggered-by-folder-presence/parent/pom.xml
+++ b/src/it/projects/profile-with-dependencies-triggered-by-folder-presence/parent/pom.xml
@@ -9,8 +9,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>@project.groupId@</groupId>
-        <artifactId>@project.artifactId@</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
         </configuration>
