--- a/src/it/projects/complete-multimodule-parent-pom-direct-dependencies/pom.xml
+++ b/src/it/projects/complete-multimodule-parent-pom-direct-dependencies/pom.xml
@@ -14,6 +14,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <flattenDependencyMode>direct</flattenDependencyMode>
         </configuration>
