--- a/src/it/projects/profile-with-deps-inherit-parent-depMgmt-jdk-multilevel/parent/pom.xml
+++ b/src/it/projects/profile-with-deps-inherit-parent-depMgmt-jdk-multilevel/parent/pom.xml
@@ -11,6 +11,7 @@
     <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-depMngt</artifactId>
     <version>2</version>
+    <relativePath/>
   </parent>
 
 
