--- a/src/it/projects/profile-with-deps-inherit-parent-depMgmt-rule/parent/pom.xml
+++ b/src/it/projects/profile-with-deps-inherit-parent-depMgmt-rule/parent/pom.xml
@@ -10,6 +10,7 @@
     <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-depMngt</artifactId>
     <version>2</version>
+    <relativePath/>
   </parent>
   <dependencyManagement>
     <dependencies>
